--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 
 <body>
-    <div id="map"></div>
+    <div class="container">
+        <div class="options-box">
+            <h1>Find Your New NYC Home</h1>
+            <div>
+                <input id="show-listings" type="button" value="Show Listings">
+                <input id="hide-listings" type="button" value="Hide Listings">
+            </div>
+        </div>
+        <div id="map"></div>
+    </div>
     <script src="assets/js/app.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNBQVwguFflllA167wvuOszBX1hV5NeW0&callback=initMap"></script>
 </body>
