--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="map"></div>
     </div>
     <script src="assets/js/app.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNBQVwguFflllA167wvuOszBX1hV5NeW0&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNBQVwguFflllA167wvuOszBX1hV5NeW0&libraries=geometry&v=3&callback=initMap"></script>
 </body>
 
 </html>
