--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
             <div>
                 <input id="show-listings" type="button" value="Show Listings">
                 <input id="hide-listings" type="button" value="Hide Listings">
+                <hr>
+                <span class="text"> Draw a shape to search within it for homes!</span>
+                <input id="toggle-drawing" type="button" value="Drawing Tools">
             </div>
         </div>
         <div id="map"></div>
     </div>
     <script src="assets/js/app.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNBQVwguFflllA167wvuOszBX1hV5NeW0&libraries=geometry&v=3&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyA5SAqCMyFio2lnVIYYFGg1bCK37lHUX98&v=3&callback=initMap"></script>
 </body>
 
 </html>
